# kodomo-wallet

./: .firebaserc  LICENSE  docker-compose.yml  firestore.rules  render.yaml
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/graphql/: __init__.py  converters.py  resolvers.py  schema.py  types.py
backend/app/batch/: __init__.py  process_recurring_deposits.py
backend/app/core/: config.py  container.py  context.py  database.py  exceptions.py
backend/app/domain/: __init__.py  entities.py
backend/app/models/: __init__.py  models.py
backend/app/repositories/: __init__.py  interfaces.py  mock_repositories.py  sqlalchemy_repositories.py
backend/app/repositories/firestore/: __init__.py  account_repository.py  child_invite_repository.py  family_member_repository.py  family_repository.py  parent_invite_repository.py  recurring_deposit_repository.py  transaction_repository.py
backend/app/repositories/sqlalchemy/: __init__.py  mapper.py  models.py  recurring_deposit_execution_repository.py  sqlalchemy_account_repository.py  sqlalchemy_child_invite_repository.py  sqlalchemy_family_relationship_repository.py  sqlalchemy_parent_invite_repository.py  sqlalchemy_profile_repository.py  sqlalchemy_recurring_deposit_repository.py  sqlalchemy_transaction_repository.py  sqlalchemy_withdrawal_request_repository.py
backend/app/services/: __init__.py  account_service.py  business_services.py  family_service.py  mailer.py  profile_service.py  recurring_deposit_service.py  transaction_service.py  withdrawal_request_service.py
backend/docs/: architecture.md
backend/tests/: conftest.py  test_graphql_integration.py  test_models.py  test_repositories.py  test_resolvers.py  test_services.py
backend/tests/graphql/: __init__.py  conftest.py  test_profile_parents_field.py
backend/tests/repositories/: conftest.py  test_account_repositories.py  test_family_repositories.py  test_profile_repositories.py  test_recurring_deposit_repositories.py  test_transaction_repositories.py  test_withdrawal_request_repositories.py
backend/tests/services/: conftest.py  test_account_services.py  test_family_service.py  test_parent_invite_services.py  test_profile_services.py  test_recurring_deposit_services.py  test_transaction_services.py  test_withdrawal_request_services.py
docs/: gcp-runbook.md  schema.md
(+87 files in other folders)
